<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_button"
        android:layout_width="121dp"
        android:layout_height="47dp"
        android:layout_marginBottom="40dp"
        android:text="@string/start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/activity_dropdown"
        android:layout_width="304dp"
        android:layout_height="46dp"
        android:layout_marginTop="196dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_textView"
        android:layout_width="243dp"
        android:layout_height="36dp"
        android:layout_marginBottom="4dp"
        android:text="@string/activity_text"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/information"
        android:layout_width="339dp"
        android:layout_height="130dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/tracking_information"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textColor="?colorTertiary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />

</androidx.constraintlayout.widget.ConstraintLayout>